+ The items now persists even after a restart, every parameter is transcribed to userItems.yml, to let the user modify it later
= Known issues:
  - user items events won't run since  I've disabled the listener,
    I need to find a way to validate the item without passing the item I need to validate (does that make sense?)

- Fixed some event related bugs with when creating a user item

- Fixed damage related bugs

- Fixed a bug where the lore of the item wasn't processed properly when creating it